OPA-Admissioncontrol/Default NS/Constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoDefaultNS
metadata:
  name: block-default-ns
spec: {}
