OPA-Admissioncontrol/Default NS/Temp.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8snodfaultns
spec:
  crd:
    spec:
      names:
        kind: K8sNoDefaultNS
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8snodfaultns

        violation[{"msg": msg}] {
          input.review.object.metadata.namespace == "default"
          msg := "Default namespace usage is not allowed"
        }
